[project]
name = "snake"
version = "0.1.0"
description = "A simple game of snake using pygame"
authors = [
    {name = "Nao Pross",email = "np@0hm.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
